Fixed Alignments

--- a/Client/src/app/components/job-offer-list/job-offer-list.component.css
+++ b/Client/src/app/components/job-offer-list/job-offer-list.component.css
@@ -2,6 +2,7 @@
   width: 95%;
   margin: 0 auto;
   margin-top: 3em;
+  margin-right: 3em;
   margin-bottom: 0.5em;
 }
 
